<resources>
    <string name="app_name">RosaCha</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    Common-->
    <string name="logout">Logout</string>
    <string name="e_mail_fragment">E-mail</string>
    <string name="example_e_mail">email@example.com</string>
    <string name="empty_email">The email field cannot be empty</string>
    <string name="secret_password">********</string>
    <string name="password_fragment">Password</string>
    <string name="barcode_require">* Barcode</string>
    <string name="barcode">Barcode</string>
    <string name="description_require">* Description</string>
    <string name="description">Description</string>
    <string name="sales_price">Sales Price $</string>
    <string name="price">Price</string>
    <string name="search">Search</string>
    <string name="size_require">* Size</string>
    <string name="size">Size</string>
    <string name="color">Color</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="rs">$</string>
    <string name="symbol_1x">1X</string>
    <string name="symbol_000">0.00</string>
    <string name="symbol_xxx">xxxxxxxxxxxxxxxxxxxxxxx</string>
    <string name="error_upload_image">Error when uploading the image</string>
    <string name="scan_failed">Scan Failed</string>
    <string name="scan_active">Scanner RosaCha Active</string>
    <string name="select_image">Select an Image</string>
    <string name="error_reduced_image">Error when reducing image</string>
    <string name="type_date">yyyy/MM/dd HH:mm:ss</string>
    <string name="required_fields">Error fields with * are mandatory</string>
    <string name="error_delete_image">Error deleting image</string>
    <string name="update_data">Successful Update</string>
    <string name="attention">Attention</string>
    <string name="research">Research</string>
    <string name="name">Name</string>
    <string name="email">E-mail</string>
    <string name="phone">Phone</string>
    <string name="email_example">clientModel@clientModel.com.br</string>
    <string name="phone_example">+(55)12991111111</string>
    <string name="total_sales">TOTAL:  $</string>
    <string name="date">Date: </string>
    <string name="clientModel">Client:</string>
    <string name="id">ID</string>
    <string name="required_field">Required field</string>

    <!-- Login Fragment-->
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="logo">Logo RosaCha</string>
    <string name="empty_password">The password field cannot be empty</string>
    <string name="not_login">Login not successful, check your email and password</string>

    <!-- Recovery Fragment-->
    <string name="recovery_account">Recovery account</string>
    <string name="inform_page">Enter your email to receive a link and password change</string>
    <string name="send">Send</string>
    <string name="sent_email">Link sent successfully, check your inbox</string>

    <!-- Register Fragment-->
    <string name="create_an_account">Create an account</string>
    <string name="register">Register</string>
    <string name="check_password">Passwords must be the same</string>
    <string name="empty_fields">Fields cannot be empty</string>

    <!-- Home Fragment-->
    <string name="home">Home</string>
    <string name="title_home">Monthly Sales</string>

    <!-- ClientModel Fragment-->
    <!--    layout -->
    <string name="add_client">Add Client</string>
    <string name="edit_client">Edit Client</string>
    <string name="name_client">Name</string>
    <string name="phone_client">Phone</string>
    <string name="birthday_client">Birthday</string>
    <string name="item_deleted_client">Item Deleted</string>
    <string name="undo_client">UNDO</string>
    <!--    Code -->
    <string name="error_already_registered_client">Error, customer already registered</string>
    <string name="error_update_data_client">Error when updating customers</string>
    <string name="error_save_client">Error saving Client</string>
    <string name="error_show_client">Error displaying customers</string>
    <string name="error_delete_client">Error deleting customers</string>
    <string name="add_success_client">Customer successfully added</string>
    <string name="required_phone_client">Error Fill phone field first</string>
    <string name="no_list_client">There are no customers to display</string>
    <string name="want_delete_client">Really want to delete: </string>
    <string name="information_delete_client">Client Deleted Successfully</string>
    <string name="list_client">List of Client</string>

    <!-- ProductModel Fragment-->
    <!--    layout -->
    <string name="productModel">Product</string>
    <string name="add_product">Add Product</string>
    <string name="update_product">Update Product</string>
    <string name="list_product">List of Products</string>
    <string name="edit_product">Edit Product</string>
    <string name="reference">Reference</string>
    <string name="cost_price">Cost Price $</string>
    <string name="sales_price_require">* Sales Price $</string>
    <string name="owner">Owner</string>
    <string name="claudia">Claudia</string>
    <string name="claudenice">Claudenice</string>
    <string name="brand">Brand</string>
    <string name="provider">Provider</string>
    <!--    Code -->
    <string name="error_show_product">Error displaying Product</string>
    <string name="error_already_registered_product">Error, productModel already registered</string>
    <string name="add_success_product">Product successfully added</string>
    <string name="error_save_product">Error saving Product</string>
    <string name="required_barcode_product">Error, fill in barcode field first</string>
    <string name="copy_barcode_product">Barcode copied</string>
    <string name="error_update_data_product">Error when updating productModel</string>
    <string name="no_list_product">There are no products to display</string>
    <string name="information_delete_product">Product Deleted Successfully</string>
    <string name="error_delete_product">Error deleting productModel</string>

    <!-- Sales Fragment-->
    <!--    layout -->
    <string name="sales">Sales</string>
    <string name="client_">Client</string>
    <string name="client_help">Type the name or cLick in the button</string>
    <string name="list_items">List of items</string>
    <string name="sub_total">Sub Total</string>
    <string name="paid">Paid</string>
    <string name="final_total">Final Total</string>
    <string name="discount">Discount</string>
    <string name="symbol_0">0%</string>
    <string name="n_parcels">Nº Parcels</string>
    <string name="sell">Sell</string>
    <string name="add_sales">Add Sales</string>
    <string name="list_sales">List of Sales</string>
    <string name="edit_sales">Edit Sales</string>
    <string name="qty">Qty:</string>


    <!--    Code -->
    <string name="add_item_sales">Add at least one item to be sold</string>
    <string name="check_value_sales">The sale value must be positive, check Paid value</string>
    <string name="error_add_sales">Error adding Sale</string>
    <string name="finalize_sales">Do you really want to Finalize the Sales?</string>
    <string name="search_customer_sales">Search Customers</string>
    <string name="go_list_sales">Go to sales list</string>


    <!-- bottom Sheet after Sales Fragment-->
    <!--    layout -->
    <string name="title_bottom_sheet_after_sales">Sale Completed Successfully!</string>
    <string name="text_bottom_sheet_after_sales">what do you want to do now?</string>
    <string name="text_button1_sheet_after_sales">Make a new sale</string>
    <string name="text_button2_sheet_after_sales">Go to Sales list</string>
    <string name="text_button3_sheet_after_sales">Share File</string>

    <!-- bottom Sheet request permission Fragment-->
    <!--    layout -->
    <string name="camera_access_title">Before continuing, we need to access your camera.</string>
    <string name="camera_access_text">We will use this permission so that you can register customers and products \n\n
Enable camera access in your device settings</string>
    <string name="go_settings">Go to settings</string>

    <!-- bottom Sheet take picture Fragment-->
    <!--    layout -->
    <string name="get_image_camera">Get Image from Camera</string>
    <string name="get_image_gallery">Get image from Gallery</string>

    <!-- bottom Sheet take picture Fragment-->
    <!--    layout -->
    <string name="enter_phone">Enter the phone</string>

    <!-- item dialog-->
    <!--    layout -->
    <string name="dialog_progress_title">Wait…</string>

    <!-- Pdf Layout-->
    <!--    layout -->
    <string name="invoice_pdf">Invoice Nº</string>
    <string name="costumer_pdf">Costumer Name:</string>

    <string name="text_pdf">non-tax coupon</string>
    <string name="item_pdf">Item</string>
    <string name="value_pdf">Value</string>
    <string name="subtotal_pdf">SubTotal:  $</string>
    <string name="discount_pdf">Discount:  $</string>
    <string name="paid_pdf">Paid:         $</string>

    <string name="installed_pdf">parceled out in:</string>
    <string name="expiration_day_pdf">Expiration every day:</string>
    <string name="msg_thanks_pdf">Rosa Cha thanks the preference</string>
    <string name="cash_sales_pdf">Cash sale</string>
    <string name="error_pdf">error generating PDF</string>

    <!-- errors Firebase Authentication-->
    <string name="account_not_registered_register_fragment">There is no user record corresponding to this identifier.</string>
    <string name="invalid_email_register_fragment">The email address is badly formatted.</string>
    <string name="invalid_password_register_fragment">The password is invalid or the user does not have a password.</string>
    <string name="email_in_use_register_fragment">The email address is already in use by another account.</string>
    <string name="strong_password_register_fragment">The given password is invalid.</string>
    <string name="network_error">No Internet connection.</string>
    <string name="error_generic">Have one problem, try again later.</string>

    <!-- DB Firebase -->
    // Production (Clients / Products / Sales)
    // Test (ClientsTest / ProductsTest / SalesTest)

    <string name="db_client">ClientsTest</string>
    <string name="db_product">ProductsTest</string>
    <string name="db_sales">SalesTest</string>
    <string name="db_month_sales">MonthSalesTest</string>




    <string name="must_be_14_digits">Must be 14 Digits</string>
    <string name="must_be_6_digits">Must be 6 Digits</string>
    <string name="invalid_email_address">Invalid Email Address</string>
    <string name="monthly_sales">monthly sales $</string>
    <string name="price_query">price query</string>
    <string name="quantity">quantity</string>
    <string name="quantity_product_list">Quantity</string>



</resources>