<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_client1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginVertical="8dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">



            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/imv_client"
                android:layout_width="76dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/baseline_image_not_supported_24"
                app:riv_corner_radius="10dp"/>

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/name"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/imv_client"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                tools:text="@string/symbol_xxx"
                app:layout_constraintStart_toStartOf="@+id/textView13"
                app:layout_constraintTop_toBottomOf="@+id/textView13" />

            <TextView
                android:id="@+id/txtemail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:text="@string/email"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textView24"
                app:layout_constraintStart_toEndOf="@+id/textView24"
                app:layout_constraintTop_toTopOf="@+id/textView24" />

            <TextView
                android:id="@+id/txt_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                tools:text="@string/email_example"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/txtemail"
                app:layout_constraintTop_toBottomOf="@+id/txtemail" />


            <TextView
                android:id="@+id/textView24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/phone"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/txt_name"
                app:layout_constraintTop_toBottomOf="@+id/txt_name" />

            <TextView
                android:id="@+id/txt_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                tools:text="@string/phone_example"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/textView24"
                app:layout_constraintTop_toBottomOf="@+id/textView24" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>