<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_drag_handle_24" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/title_bottom_sheet_after_sales"
        android:textColor="@color/pink"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/text_bottom_sheet_after_sales"
        android:textColor="@color/pink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView35" />

    <View
        android:id="@+id/divider2"
        android:layout_width="390dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.238"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView36" />

    <ImageView
        android:id="@+id/imv_bottom_new_sales"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2"
        app:srcCompat="@drawable/baseline_attach_money_24" />

    <TextView
        android:id="@+id/txt_bottom_new_sales"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/text_button1_sheet_after_sales"
        android:textColor="@color/pink"
        app:layout_constraintBottom_toBottomOf="@+id/imv_bottom_new_sales"
        app:layout_constraintStart_toEndOf="@+id/imv_bottom_new_sales"
        app:layout_constraintTop_toTopOf="@+id/imv_bottom_new_sales" />

    <ImageView
        android:id="@+id/imv_bottom_list_sales"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imv_bottom_new_sales"
        app:srcCompat="@drawable/baseline_format_list_bulleted_24" />

    <TextView
        android:id="@+id/txt_bottom_list_sales"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/text_button2_sheet_after_sales"
        android:textColor="@color/pink"
        app:layout_constraintBottom_toBottomOf="@+id/imv_bottom_list_sales"
        app:layout_constraintStart_toEndOf="@+id/imv_bottom_list_sales"
        app:layout_constraintTop_toTopOf="@+id/imv_bottom_list_sales" />

    <ImageView
        android:id="@+id/imv_bottom_pdf_sales"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/imv_bottom_list_sales"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imv_bottom_list_sales"
        app:srcCompat="@drawable/baseline_picture_as_pdf_24" />

    <TextView
        android:id="@+id/txt_bottom_pdf_sales"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/text_button3_sheet_after_sales"
        android:textColor="@color/pink"
        app:layout_constraintBottom_toBottomOf="@+id/imv_bottom_pdf_sales"
        app:layout_constraintStart_toEndOf="@+id/imv_bottom_pdf_sales"
        app:layout_constraintTop_toTopOf="@+id/imv_bottom_pdf_sales" />


</androidx.constraintlayout.widget.ConstraintLayout>